test/parser/should_fail/constants.souc.bad
import BadImport
import OopsFailure

con = 4
con2 = 5
con = 6
